k8s/docker-flow-letsencrypt/templates/ing.yaml
---
# Source: docker-flow-letsencrypt/templates/ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: lets-encrypt-docker-flow-letsencrypt
  labels:
    app: docker-flow-letsencrypt
    chart: docker-flow-letsencrypt-0.0.1
    release: lets-encrypt
    heritage: Tiller
  annotations:
    kubernetes.io/ingress.class: "nginx"
    certmanager.k8s.io/issuer: "letsencrypt-prod"
    certmanager.k8s.io/acme-challenge-type: http01
spec:
  rules:
  - host: proxy-letsencrypt.dockerflow.com
    http:
      paths:
        - path: /
          backend:
            serviceName: lets-encrypt-docker-flow-letsencrypt
            servicePort: 80
  tls:
  - hosts:
    - proxy-letsencrypt.dockerflow.com
    secretName: letsencrypt-secret-letsencrypt
